# DGGRID

./: .gitignore  CMakeLists.txt  INSTALL.md  neighber.cpp
examples/: do_meta.sh
examples/genChildren/: None.gen  cells.gen
examples/gennei/: cells.gen
src/: do_caldgg.sh  do_caldgg_valmass.sh
src/apps/appex/: appex.cpp
src/apps/caldgg/: CMakeLists.txt  calDgg.cpp  calDgg.h  fileio.cpp  main.cpp  readme  testfun.h
src/apps/dggrid/: gridgen.cpp  table.cpp  transform.cpp
src/apps/dggrid/outputfiles/: children.chd  neighbors.nbr
src/lib/dglib/include/dglib/: Dg2WayConverter.h  DgAddress.h  DgAddressBase.h  DgBoundedIDGG.h  DgBoundedRF2D.h  DgBoundedRFBase.h  DgContCartRF.h  DgConverter.h  DgConverterBase.h  DgDiscRF.h  DgDiscRFS.h  DgDiscRFS2D.h  DgDmdD4Grid2D.h  DgDmdD4Grid2DS.h  DgEllipsoidRF.h  DgIDGGBase.h  DgIDGGS.h  DgIDGGS4D.h  DgIDGGSBase.h  DgIDGGutil.h  DgLocBase.h  DgLocVector.h  DgLocation.h  DgProjGnomonicRF.h  DgProjISEA.h  DgProjTriRF.h  DgRF.h  DgRFNetwork.h  DgTriGrid2D.h
src/lib/dglib/lib/: DgBoundedIDGG.cpp  DgBoundedRF.hpp  DgBoundedRF2D.cpp  DgConverterBase.cpp  DgDVec2D.cpp  DgDiscRF.hpp  DgDmdD4Grid2D.cpp  DgDmdD4Grid2DS.cpp  DgDmdD8Grid2D.cpp  DgDmdIDGG.cpp  DgEllipsoidRF.cpp  DgIDGGBase.cpp  DgIDGGS4D.cpp  DgIDGGutil.cpp  DgOutChildrenFile.cpp  DgOutNeighborsFile.cpp  DgProjISEA.cpp  DgProjTriRF.cpp  DgRF.hpp  DgRFBase.cpp  DgRFNetwork.cpp
